--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -1,5 +1,8 @@
 name: Build and Deploy
-on: [push]
+on:
+  push:
+    branches:
+      - master
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -26,13 +29,12 @@ jobs:
       - run: npm install
       - run: npm run build
         env:
-            CI: false
+          CI: false
 
       - name: Deploy 🚀
         if: github.ref == 'refs/heads/main'
         uses: JamesIves/github-pages-deploy-action@3.6.2
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages  # The branch the action should deploy to.
-          FOLDER: out       # The folder the action should deploy.
-          CLEAN: true       # Automatically remove deleted files from the deploy branch
+          branch: gh-pages # The branch the action should deploy to.
+          folder: .next # The folder the action should deploy.
+          clean: true # Automatically remove deleted files from the deploy branch
