--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.6.2
         with:
-          token: ${{ secrets.ACCESS_TOKEN }}
+          # token: ${{ secrets.ACCESS_TOKEN }}
           branch: gh-pages # The branch the action should deploy to.
           folder: .next # The folder the action should deploy.
           clean: true # Automatically remove deleted files from the deploy branch
